  [INTERNALS]
  - More tests for header(), thanks to Ryo Anazawa.

Version 3.59 Dec 29th, 2011

 [BUG FIXES]
 - We no longer read from STDIN when the Content-Length is not set, preventing
   requests with no Content-Length from freezing in some cases. This is consistent
   with the CGI RFC 3875, and is also consistent with CGI::Simple. However, the old
   behavior may have been expected by some command-line uses of CGI.pm.
   Thanks to Philip Potter and Yanick Champoux. See RT#52469 for details:
   https://rt.cpan.org/Public/Bug/Display.html?id=52469

 [INTERNALS]
 - remove tmpdirs more aggressively. Thanks to rjbs (RT#73288)
 - use Text::ParseWords instead of ancient shellwords.pl. Thanks to AlexBio.
 - remove use of define(@arr). Thanks to rjbs.
 - spelling fixes. Thanks to Gregor Herrmann and Alessandro Ghedini.
 - fix test count and warning in t/fast.t. Thanks to Yanick.

Version 3.58 Nov 11th, 2011

    [DOCUMENTATION]
    - Clarify that using query_string() only has defined behavior when using the GET method. (RT#60813)

Version 3.57 Nov 9th, 2011
    [INTERNALS]
    - test failure in t/fast.t introduced in 3.56 is fixed. (Thanks to zefram and chansen).
    - Test::More requirement has been bumped to 0.98

Version 3.56 Nov 8th, 2011

    [SECURITY]
    Use public and documented FCGI.pm API in CGI::Fast
        CGI::Fast was using an FCGI API that was deprecated and removed from
        documentation more than ten years ago. Usage of this deprecated API with
        FCGI >= 0.70 or FCGI <= 0.73 introduces a security issue.
        <https://rt.cpan.org/Public/Bug/Display.html?id=68380>
        <http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-2766>
        (Thanks to chansen)

    [INTERNALS]
    - tmp files are now cleaned up on VMS ( RT#69210, thanks to cberry@cpan.org )
    - Fixed test failure: done_testing() added to url.t (Thanks to Ryan Jendoubi)
    - Clarify preferred bug submission location in docs, and note that Mark Stosberg